--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Application\Source\Application.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Vulkan\Source\VulkanBuffer.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanCommandBuffers.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanCommandPool.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanDebug.cpp" />
@@ -43,6 +44,7 @@
     <ClInclude Include="Utility\Header\ManagedObject.h" />
     <ClInclude Include="Vulkan\Header\IVulkanObject.h" />
     <ClInclude Include="Vulkan\Header\VertexInformation.h" />
+    <ClInclude Include="Vulkan\Header\VulkanBuffer.h" />
     <ClInclude Include="Vulkan\Header\VulkanCommandBuffers.h" />
     <ClInclude Include="Vulkan\Header\VulkanCommandPool.h" />
     <ClInclude Include="Vulkan\Header\VulkanDebug.h" />
