1) IVulkanObject 삭제 2) 임시로 명령 버퍼를 생성하고 명령 전송하는 SingleCommandPool 구현 3) 버퍼가 그래픽카드 로컬 버퍼일경우 스테이징버퍼에서 카피해주는 헬퍼 함수 구현

--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj.filters
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj.filters
@@ -78,6 +78,7 @@
     <ClCompile Include="Vulkan\Source\VulkanDescriptorPool.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanDescriptorSetLayout.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanDescriptorSet.cpp" />
+    <ClCompile Include="Vulkan\Source\VulkanTexture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Header\Application.h">
@@ -128,9 +129,6 @@
     <ClInclude Include="Window\Header\WindowsWindow.h">
       <Filter>Window\Header</Filter>
     </ClInclude>
-    <ClInclude Include="Vulkan\Header\IVulkanObject.h">
-      <Filter>Vulkan\Header</Filter>
-    </ClInclude>
     <ClInclude Include="Vulkan\Header\VulkanCommandPool.h" />
     <ClInclude Include="Vulkan\Header\VulkanCommandBuffers.h" />
     <ClInclude Include="Vulkan\Header\VulkanPipeline.h" />
@@ -142,5 +140,6 @@
       <Filter>Vulkan\Header</Filter>
     </ClInclude>
     <ClInclude Include="Vulkan\Header\VulkanDescriptorSet.h" />
+    <ClInclude Include="Vulkan\Header\VulkanTexture.h" />
   </ItemGroup>
 </Project>
