--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -38,13 +38,13 @@
     <ClCompile Include="Vulkan\Source\VulkanSemaphore.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanShaderModule.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanSwapchain.cpp" />
+    <ClCompile Include="Vulkan\Source\VulkanTexture.cpp" />
     <ClCompile Include="Window\Source\WindowsWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Header\Application.h" />
     <ClInclude Include="Utility\Header\Macro.h" />
     <ClInclude Include="Utility\Header\ManagedObject.h" />
-    <ClInclude Include="Vulkan\Header\IVulkanObject.h" />
     <ClInclude Include="Vulkan\Header\VertexInformation.h" />
     <ClInclude Include="Vulkan\Header\VulkanDescriptorSet.h" />
     <ClInclude Include="Vulkan\Header\VulkanBuffer.h" />
@@ -65,6 +65,7 @@
     <ClInclude Include="Vulkan\Header\VulkanSemaphore.h" />
     <ClInclude Include="Vulkan\Header\VulkanShaderModule.h" />
     <ClInclude Include="Vulkan\Header\VulkanSwapchain.h" />
+    <ClInclude Include="Vulkan\Header\VulkanTexture.h" />
     <ClInclude Include="Window\Header\IWindow.h" />
     <ClInclude Include="Window\Header\WindowsWindow.h" />
   </ItemGroup>
@@ -122,7 +123,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\Projects\LKEngine\Libs\Vulkan\1.0.65.0\Include;D:\Projects\LKEngine\Libs\GLFW\include;D:\Projects\LKEngine\Libs\GLM;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Projects\LKEngine\Libs\stb-master;D:\Projects\LKEngine\Libs\Vulkan\1.0.65.0\Include;D:\Projects\LKEngine\Libs\GLFW\include;D:\Projects\LKEngine\Libs\GLM;$(IncludePath)</IncludePath>
     <LibraryPath>D:\Projects\LKEngine\Libs\Vulkan\1.0.65.0\Lib32;D:\Projects\LKEngine\Libs\GLFW\lib-vc2015x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
