--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="Vulkan\Source\VulkanDescriptorSetLayout.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanDevice.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanExtension.cpp" />
+    <ClCompile Include="Vulkan\Source\VulkanMesh.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanPipeline.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanImage.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanInstance.cpp" />
@@ -56,6 +57,7 @@
     <ClInclude Include="Vulkan\Header\VulkanDevice.h" />
     <ClInclude Include="Vulkan\Header\VulkanDeviceChild.h" />
     <ClInclude Include="Vulkan\Header\VulkanExtension.h" />
+    <ClInclude Include="Vulkan\Header\VulkanMesh.h" />
     <ClInclude Include="Vulkan\Header\VulkanPipeline.h" />
     <ClInclude Include="Vulkan\Header\VulkanImage.h" />
     <ClInclude Include="Vulkan\Header\VulkanInstance.h" />
@@ -123,7 +125,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\Projects\LKEngine\Libs\stb-master;D:\Projects\LKEngine\Libs\Vulkan\1.0.65.0\Include;D:\Projects\LKEngine\Libs\GLFW\include;D:\Projects\LKEngine\Libs\GLM;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Projects\LKEngine\Libs\tinyobjloader;D:\Projects\LKEngine\Libs\stb-master;D:\Projects\LKEngine\Libs\Vulkan\1.0.65.0\Include;D:\Projects\LKEngine\Libs\GLFW\include;D:\Projects\LKEngine\Libs\GLM;$(IncludePath)</IncludePath>
     <LibraryPath>D:\Projects\LKEngine\Libs\Vulkan\1.0.65.0\Lib32;D:\Projects\LKEngine\Libs\GLFW\lib-vc2015x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -133,7 +135,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\Projects\LKEngine\Libs\GLFW\include;D:\Projects\LKEngine\Libs\GLM;D:\Projects\LKEngine\Libs\Vulkan\1.0.65.0\Include;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Projects\LKEngine\Libs\tinyobjloader;D:\Projects\LKEngine\Libs\stb-master;D:\Projects\LKEngine\Libs\GLFW\include;D:\Projects\LKEngine\Libs\GLM;D:\Projects\LKEngine\Libs\Vulkan\1.0.65.0\Include;$(IncludePath)</IncludePath>
     <LibraryPath>D:\Projects\LKEngine\Libs\GLFW\lib-vc2015x86;D:\Projects\LKEngine\Libs\Vulkan\1.0.65.0\Lib32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
