--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj.filters
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj.filters
@@ -79,6 +79,7 @@
     <ClCompile Include="Vulkan\Source\VulkanDescriptorSetLayout.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanDescriptorSet.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanTexture.cpp" />
+    <ClCompile Include="Vulkan\Source\VulkanMesh.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Header\Application.h">
@@ -141,5 +142,6 @@
     </ClInclude>
     <ClInclude Include="Vulkan\Header\VulkanDescriptorSet.h" />
     <ClInclude Include="Vulkan\Header\VulkanTexture.h" />
+    <ClInclude Include="Vulkan\Header\VulkanMesh.h" />
   </ItemGroup>
 </Project>
