1) Vulkan 네임스페이스 매크로 정의 후 변경 2) VulkanDevice 코드 정리 및 나중에 추상화 할것 따로 빼냄

--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Header\Application.h" />
+    <ClInclude Include="Src\Entity.h" />
+    <ClInclude Include="Src\Scene.h" />
     <ClInclude Include="Utility\Header\Macro.h" />
     <ClInclude Include="Utility\Header\ManagedObject.h" />
     <ClInclude Include="Vulkan\Header\VertexInformation.h" />
@@ -57,6 +59,7 @@
     <ClInclude Include="Vulkan\Header\VulkanDevice.h" />
     <ClInclude Include="Vulkan\Header\VulkanDeviceChild.h" />
     <ClInclude Include="Vulkan\Header\VulkanExtension.h" />
+    <ClInclude Include="Vulkan\Header\VulkanMaterial.h" />
     <ClInclude Include="Vulkan\Header\VulkanMesh.h" />
     <ClInclude Include="Vulkan\Header\VulkanPipeline.h" />
     <ClInclude Include="Vulkan\Header\VulkanImage.h" />
