--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="Vulkan\Source\VulkanDescriptorSetLayout.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanDevice.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanExtension.cpp" />
+    <ClCompile Include="Vulkan\Source\VulkanMaterial.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanMesh.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanPipeline.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanImage.cpp" />
@@ -48,6 +49,7 @@
     <ClInclude Include="Application\Header\Application.h" />
     <ClInclude Include="Src\Camera.h" />
     <ClInclude Include="Src\Entity.h" />
+    <ClInclude Include="Src\Mesh.h" />
     <ClInclude Include="Src\Scene.h" />
     <ClInclude Include="Utility\Header\Macro.h" />
     <ClInclude Include="Utility\Header\ManagedObject.h" />
