1) PipelineManager 구현 2) SceneManager 구현 3) EntityPool 구현 4) Time 클래스 구현 5) VulkanBuffer, VulkanPipeline, VulkanTexture Init,Shutdown 삭제 및 생성자, 파괴자로 옮김

--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -23,6 +23,11 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Src\Camera.cpp" />
     <ClCompile Include="Src\Entity.cpp" />
+    <ClCompile Include="Src\EntityPool.cpp" />
+    <ClCompile Include="Src\PipelineManager.cpp" />
+    <ClCompile Include="Src\Scene.cpp" />
+    <ClCompile Include="Src\SceneManager.cpp" />
+    <ClCompile Include="Src\Time.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanBuffer.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanCommandBuffers.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanCommandPool.cpp" />
@@ -47,12 +52,19 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Header\Application.h" />
+    <ClInclude Include="Src\AssetManager.h" />
     <ClInclude Include="Src\Camera.h" />
     <ClInclude Include="Src\Entity.h" />
+    <ClInclude Include="Src\EntityPool.h" />
     <ClInclude Include="Src\Mesh.h" />
+    <ClInclude Include="Src\PipelineManager.h" />
     <ClInclude Include="Src\Scene.h" />
+    <ClInclude Include="Src\SceneManager.h" />
+    <ClInclude Include="Src\TextureManager.h" />
+    <ClInclude Include="Src\Time.h" />
     <ClInclude Include="Utility\Header\Macro.h" />
     <ClInclude Include="Utility\Header\ManagedObject.h" />
+    <ClInclude Include="Utility\Header\TSingleton.h" />
     <ClInclude Include="Vulkan\Header\VertexInformation.h" />
     <ClInclude Include="Vulkan\Header\VulkanDescriptorSet.h" />
     <ClInclude Include="Vulkan\Header\VulkanBuffer.h" />
