--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="Src\Camera.cpp" />
     <ClCompile Include="Src\Entity.cpp" />
     <ClCompile Include="Src\EntityPool.cpp" />
+    <ClCompile Include="Src\Mesh.cpp" />
     <ClCompile Include="Src\PipelineManager.cpp" />
     <ClCompile Include="Src\Scene.cpp" />
     <ClCompile Include="Src\SceneManager.cpp" />
@@ -52,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Header\Application.h" />
+    <ClInclude Include="Source\TestScene.h" />
     <ClInclude Include="Src\AssetManager.h" />
     <ClInclude Include="Src\Camera.h" />
     <ClInclude Include="Src\Entity.h" />
