--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -19,77 +19,78 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Application\Source\Application.cpp" />
+    <ClCompile Include="Source\Application\Source\Application.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Src\Camera.cpp" />
-    <ClCompile Include="Src\Entity.cpp" />
-    <ClCompile Include="Src\EntityPool.cpp" />
-    <ClCompile Include="Src\Mesh.cpp" />
-    <ClCompile Include="Src\PipelineManager.cpp" />
-    <ClCompile Include="Src\Scene.cpp" />
-    <ClCompile Include="Src\SceneManager.cpp" />
-    <ClCompile Include="Src\Time.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanBuffer.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanCommandBuffers.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanCommandPool.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanDebug.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanDescriptorPool.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanDescriptorSet.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanDescriptorSetLayout.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanDevice.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanExtension.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanMaterial.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanPipeline.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanImage.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanInstance.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanQueue.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanRenderPass.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanSemaphore.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanShaderModule.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanSwapchain.cpp" />
-    <ClCompile Include="Vulkan\Source\VulkanTexture.cpp" />
-    <ClCompile Include="Window\Source\WindowsWindow.cpp" />
+    <ClCompile Include="Source\Application\Source\Camera.cpp" />
+    <ClCompile Include="Source\Application\Source\Entity.cpp" />
+    <ClCompile Include="Source\Application\Source\EntityPool.cpp" />
+    <ClCompile Include="Source\Application\Source\Mesh.cpp" />
+    <ClCompile Include="Source\Application\Source\PipelineManager.cpp" />
+    <ClCompile Include="Source\Application\Source\Scene.cpp" />
+    <ClCompile Include="Source\Application\Source\SceneManager.cpp" />
+    <ClCompile Include="Source\Application\Source\Time.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanBuffer.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanCommandBuffers.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanCommandPool.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanDebug.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanDescriptorPool.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanDescriptorSet.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanDescriptorSetLayout.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanDevice.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanExtension.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanMaterial.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanPipeline.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanImage.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanInstance.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanQueue.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanRenderPass.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanSemaphore.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanShaderModule.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanSwapchain.cpp" />
+    <ClCompile Include="Source\Renderer\Source\VulkanTexture.cpp" />
+    <ClCompile Include="Source\Window\Source\WindowsWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Application\Header\Application.h" />
+    <ClInclude Include="Source\Application\Header\Application.h" />
     <ClInclude Include="Source\TestScene.h" />
-    <ClInclude Include="Src\AssetManager.h" />
-    <ClInclude Include="Src\Camera.h" />
-    <ClInclude Include="Src\Entity.h" />
-    <ClInclude Include="Src\EntityPool.h" />
-    <ClInclude Include="Src\Mesh.h" />
-    <ClInclude Include="Src\PipelineManager.h" />
-    <ClInclude Include="Src\Scene.h" />
-    <ClInclude Include="Src\SceneManager.h" />
-    <ClInclude Include="Src\TextureManager.h" />
-    <ClInclude Include="Src\Time.h" />
-    <ClInclude Include="Utility\Header\Macro.h" />
-    <ClInclude Include="Utility\Header\ManagedObject.h" />
-    <ClInclude Include="Utility\Header\TSingleton.h" />
-    <ClInclude Include="Vulkan\Header\VertexInformation.h" />
-    <ClInclude Include="Vulkan\Header\VulkanDescriptorSet.h" />
-    <ClInclude Include="Vulkan\Header\VulkanBuffer.h" />
-    <ClInclude Include="Vulkan\Header\VulkanCommandBuffers.h" />
-    <ClInclude Include="Vulkan\Header\VulkanCommandPool.h" />
-    <ClInclude Include="Vulkan\Header\VulkanDebug.h" />
-    <ClInclude Include="Vulkan\Header\VulkanDescriptorSetLayout.h" />
-    <ClInclude Include="Vulkan\Header\VulkanDescriptorPool.h" />
-    <ClInclude Include="Vulkan\Header\VulkanDevice.h" />
-    <ClInclude Include="Vulkan\Header\VulkanDeviceChild.h" />
-    <ClInclude Include="Vulkan\Header\VulkanExtension.h" />
-    <ClInclude Include="Vulkan\Header\VulkanMaterial.h" />
-    <ClInclude Include="Vulkan\Header\VulkanPipeline.h" />
-    <ClInclude Include="Vulkan\Header\VulkanImage.h" />
-    <ClInclude Include="Vulkan\Header\VulkanInstance.h" />
-    <ClInclude Include="Vulkan\Header\VulkanQueue.h" />
-    <ClInclude Include="Vulkan\Header\VulkanQueueFamilyIndices.h" />
-    <ClInclude Include="Vulkan\Header\VulkanRenderPass.h" />
-    <ClInclude Include="Vulkan\Header\VulkanSemaphore.h" />
-    <ClInclude Include="Vulkan\Header\VulkanShaderModule.h" />
-    <ClInclude Include="Vulkan\Header\VulkanSwapchain.h" />
-    <ClInclude Include="Vulkan\Header\VulkanTexture.h" />
-    <ClInclude Include="Window\Header\IWindow.h" />
-    <ClInclude Include="Window\Header\WindowsWindow.h" />
+    <ClInclude Include="Source\Application\Header\AssetManager.h" />
+    <ClInclude Include="Source\Application\Header\Camera.h" />
+    <ClInclude Include="Source\Application\Header\Entity.h" />
+    <ClInclude Include="Source\Application\Header\EntityPool.h" />
+    <ClInclude Include="Source\Application\Header\Mesh.h" />
+    <ClInclude Include="Source\Application\Header\PipelineManager.h" />
+    <ClInclude Include="Source\Application\Header\Scene.h" />
+    <ClInclude Include="Source\Application\Header\SceneManager.h" />
+    <ClInclude Include="Source\Application\Header\TextureManager.h" />
+    <ClInclude Include="Source\Application\Header\Time.h" />
+    <ClInclude Include="Source\Utility\Header\Macro.h" />
+    <ClInclude Include="Source\Utility\Header\ManagedObject.h" />
+    <ClInclude Include="Source\Utility\Header\TSingleton.h" />
+    <ClInclude Include="Source\Renderer\Header\VertexInformation.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanDescriptorSet.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanBuffer.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanCommandBuffers.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanCommandPool.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanDebug.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanDescriptorSetLayout.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanDescriptorPool.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanDevice.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanDeviceChild.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanExtension.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanMaterial.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanPipeline.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanImage.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanInstance.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanQueue.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanQueueFamilyIndices.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanRenderPass.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanSemaphore.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanShaderModule.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanSwapchain.h" />
+    <ClInclude Include="Source\Renderer\Header\VulkanTexture.h" />
+    <ClInclude Include="Source\Window\Header\IWindow.h" />
+    <ClInclude Include="Source\Window\Header\WindowsWindow.h" />
+    <ClInclude Include="TestScene.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
